[package]
name = "bytecon_tls"
version = "0.1.1"
edition = "2021"
authors = ["Austin Heller"]
description = "A library for sending ByteConverter implementations over TLS from clients to a server."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/bytecon_tls"
license = "MIT OR Apache-2.0"
keywords = ["networking", "trait", "async", "client", "server"]
categories = ["network-programming"]

[dependencies]
bytecon = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23" }
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0" }
thiserror = { version = "1" }
chrono = { version = "0.4" }
cloneless_cow = { version = "0.1" }
base64 = { version = "0.22" }

[dev-dependencies]
tempfile = { version = "3" }
rcgen = { version = "0.13", features = ["pem"] }
rand = { version = "0.8" }